added publication test

--- a/markdown_generator/works.bib
+++ b/markdown_generator/works.bib
@@ -11,7 +11,7 @@
 	title = {Fluid Intelligence Is (Much) More than Working Memory Capacity: An Experimental Analysis},
 	journal = {Journal of Intelligence}
 },
-@article{Bast_2023,	doi = {10.1186/s13229-023-00537-6},	url = {https://doi.org/10.1186%2Fs13229-023-00537-6},	year = 2023,	month = {feb},	publisher = {Springer Science and Business Media {LLC}},	volume = {14},	number = {1},	author = {Nico Bast and Luke Mason and Christine Ecker and Sarah Baumeister and Tobias Banaschewski and Emily J. H. Jones and Declan G. M. Murphy and Jan K. Buitelaar and Eva Loth and Gahan Pandina and Jumana Ahmad and Sara Ambrosino and Bonnie Auyeung and Tobias Banaschewski and Simon Baron-Cohen and Nico Bast and Sarah Baumeister and Christian F. Beckmann and Sven Bölte and Thomas Bourgeron and Carsten Bours and Michael Brammer and Daniel Brandeis and Claudia Brogna and Yvette de Bruijn and Jan K. Buitelaar and Bhismadev Chakrabarti and Tony Charman and Ineke Cornelissen and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Jessica Faulkner and Vincent Frouin and Pilar Garc{\'{e}}s and David Goyard and Lindsay Ham and Hannah Hayward and Joerg Hipp and Rosemary Holt and Mark Johnson and Emily J. H. Jones and Prantik Kundu and Meng-Chuan Lai and Xavier Liogier D'ardhuy and Michael V. Lombardo and Eva Loth and David J. Lythgoe and Ren{\'{e}} Mandl and Andre Marquand and Luke Mason and Maarten Mennes and Andreas Meyer-Lindenberg and Carolin Moessnang and Declan G. M. Murphy and Bethany Oakley and Laurence O'Dwyer and Marianne Oldehinkel and Bob Oranje and Gahan Pandina and Antonio M. Persico and Barbara Ruggeri and Amber Ruigrok and Jessica Sabet and Roberto Sacco and Antonia San Jos{\'{e}} C{\'{a}}ceres and Emily Simonoff and Will Spooren and Julian Tillmann and Roberto Toro and Heike Tost and Jack Waldman and Steve C. R. Williams and Caroline Wooldridge and Marcel P. Zwiers and Christine M. Freitag and},	title = {Sensory salience processing moderates attenuated gazes on faces in autism spectrum disorder: a case{\textendash}control study},	journal = {Molecular Autism}},
+@article{Bast_2023,	doi = {10.1186/s13229-023-00537-6},	url = {https://doi.org/10.1186%2Fs13229-023-00537-6},	year = 2023,	month = {feb},	publisher = {Springer Science and Business Media {LLC}},	volume = {14},	number = {1},	author = {Nico Bast and Luke Mason and Christine Ecker and Sarah Baumeister and Tobias Banaschewski and Emily J. H. Jones and Declan G. M. Murphy and Jan K. Buitelaar and Eva Loth and Gahan Pandina and Jumana Ahmad and Sara Ambrosino and Bonnie Auyeung and Tobias Banaschewski and Simon Baron-Cohen and Nico Bast and Sarah Baumeister and Christian F. Beckmann and Sven Boelte and Thomas Bourgeron and Carsten Bours and Michael Brammer and Daniel Brandeis and Claudia Brogna and Yvette de Bruijn and Jan K. Buitelaar and Bhismadev Chakrabarti and Tony Charman and Ineke Cornelissen and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Jessica Faulkner and Vincent Frouin and Pilar Garc{\'{e}}s and David Goyard and Lindsay Ham and Hannah Hayward and Joerg Hipp and Rosemary Holt and Mark Johnson and Emily J. H. Jones and Prantik Kundu and Meng-Chuan Lai and Xavier Liogier D'ardhuy and Michael V. Lombardo and Eva Loth and David J. Lythgoe and Ren{\'{e}} Mandl and Andre Marquand and Luke Mason and Maarten Mennes and Andreas Meyer-Lindenberg and Carolin Moessnang and Declan G. M. Murphy and Bethany Oakley and Laurence O'Dwyer and Marianne Oldehinkel and Bob Oranje and Gahan Pandina and Antonio M. Persico and Barbara Ruggeri and Amber Ruigrok and Jessica Sabet and Roberto Sacco and Antonia San Jos{\'{e}} C{\'{a}}ceres and Emily Simonoff and Will Spooren and Julian Tillmann and Roberto Toro and Heike Tost and Jack Waldman and Steve C. R. Williams and Caroline Wooldridge and Marcel P. Zwiers and Christine M. Freitag and},	title = {Sensory salience processing moderates attenuated gazes on faces in autism spectrum disorder: a case{\textendash}control study},	journal = {Molecular Autism}},
 @article{PMID:36111843,
 	title = {Pupillometric measures of altered stimulus-evoked locus coeruleus-norepinephrine activity explain attenuated social attention in preschoolers with autism spectrum disorder.},
 	author = {Polzer L and Freitag CM and Bast N},
@@ -21,8 +21,8 @@
 	year = {2022}
 },
 @article{PMID:36070771,
-	title = {Sensorische Auffälligkeiten bei Autismus-Spektrum-Störung: Validierung und Adaptation des englischsprachigen „Sensory Perception Quotient“ (SPQ) von Tavassoli und Kollegen.},
-	author = {Klein C and Miczuga T and Röring H and Kost M and Bast N and Thiemann U and Jarczok T and Fleischhaker C and Tebartz van Elst L and Riedel A and Biscaldi M},
+	title = {Sensorische Auffaelligkeiten bei Autismus-Spektrum-Stoerung: Validierung und Adaptation des englischsprachigen „Sensory Perception Quotient“ (SPQ) von Tavassoli und Kollegen.},
+	author = {Klein C and Miczuga T and Roering H and Kost M and Bast N and Thiemann U and Jarczok T and Fleischhaker C and Tebartz van Elst L and Riedel A and Biscaldi M},
 	doi = {10.1055/a-1839-6095},
 	journal = {Fortschritte der Neurologie-Psychiatrie},
 	month = {09},
@@ -53,7 +53,7 @@
 },
 @article{PMID:35774088,
 	title = {An German Short-Version of the "Sensory Perception Quotient" for Adults With Autism Spectrum Disorder.},
-	author = {Klein C and Miczuga T and Kost MS and Röring H and Jarczok TA and Bast N and Thiemann U and Fleischhaker C and Tebartz Van Elst L and Riedel A and Biscaldi M},
+	author = {Klein C and Miczuga T and Kost MS and Roering H and Jarczok TA and Bast N and Thiemann U and Fleischhaker C and Tebartz Van Elst L and Riedel A and Biscaldi M},
 	doi = {10.3389/fpsyt.2022.781409},
 	journal = {Frontiers in psychiatry},
 	year = {2022}
@@ -68,7 +68,7 @@
 },
 @article{PMID:35585637,
 	title = {Resting state EEG power spectrum and functional connectivity in autism: a cross-sectional analysis.},
-	author = {Garcés P and Baumeister S and Mason L and Chatham CH and Holiga S and Dukart J and Jones EJH and Banaschewski T and Baron-Cohen S and Bölte S and Buitelaar JK and Durston S and EU-AIMS LEAP group authorship},
+	author = {Garcés P and Baumeister S and Mason L and Chatham CH and Holiga S and Dukart J and Jones EJH and Banaschewski T and Baron-Cohen S and Boelte S and Buitelaar JK and Durston S and EU-AIMS LEAP group authorship},
 	doi = {10.1186/s13229-022-00500-x},
 	journal = {Molecular autism},
 	month = {05},
@@ -76,7 +76,7 @@
 },
 @article{PMID:34911565,
 	title = {Preference for biological motion is reduced in ASD: implications for clinical trials and the search for biomarkers.},
-	author = {Mason L and Shic F and Falck-Ytter T and Chakrabarti B and Charman T and Loth E and Tillmann J and Banaschewski T and Baron-Cohen S and Bölte S and Buitelaar J and Durston S and LEAP Team*},
+	author = {Mason L and Shic F and Falck-Ytter T and Chakrabarti B and Charman T and Loth E and Tillmann J and Banaschewski T and Baron-Cohen S and Boelte S and Buitelaar J and Durston S and LEAP Team*},
 	doi = {10.1186/s13229-021-00476-0},
 	journal = {Molecular autism},
 	month = {12},
@@ -100,7 +100,7 @@
 	volume = {14},
 	number = {4},
 	pages = {759--772},
-	author = {Sophia A. C. Wellnitz and Isabella Kästel and Leonora Vllasaliu and Hannah Cholemkery and Christine M. Freitag and Nico Bast},
+	author = {Sophia A. C. Wellnitz and Isabella Kaestel and Leonora Vllasaliu and Hannah Cholemkery and Christine M. Freitag and Nico Bast},
 	title = {The Revised Children{\textquotesingle}s Communication Checklist-2 ($\less$scp$\greater${CCC}-R$\less$/scp$\greater$): Factor Structure and Psychometric Evaluation},
 	journal = {Autism Research}
 },
@@ -112,7 +112,7 @@
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {21},
 	number = {1},
-	author = {Janina Kitzerow and Matthes Hackbusch and Katrin Jensen and Meinhard Kieser and Michele Noterdaeme and Ulrike Fröhlich and Regina Taurines and Julia Gei{\ss}ler and Nicole Wolff and Veit Roessner and Nico Bast and Karoline Teufel and Ziyon Kim and Christine M. Freitag},
+	author = {Janina Kitzerow and Matthes Hackbusch and Katrin Jensen and Meinhard Kieser and Michele Noterdaeme and Ulrike Froehlich and Regina Taurines and Julia Gei{\ss}ler and Nicole Wolff and Veit Roessner and Nico Bast and Karoline Teufel and Ziyon Kim and Christine M. Freitag},
 	title = {Study protocol of the multi-centre, randomised controlled trial of the Frankfurt Early Intervention Programme A-{FFIP} versus early intervention as usual for toddlers and preschool children with Autism Spectrum Disorder (A-{FFIP} study)},
 	journal = {Trials}
 },
@@ -149,7 +149,7 @@
 	volume = {51},
 	number = {4},
 	pages = {1224--1237},
-	author = {Isabella S. Kästel and Leonora Vllasaliu and Sophia Wellnitz and Hannah Cholemkery and Christine M. Freitag and Nico Bast},
+	author = {Isabella S. Kaestel and Leonora Vllasaliu and Sophia Wellnitz and Hannah Cholemkery and Christine M. Freitag and Nico Bast},
 	title = {Repetitive Behavior in Children and Adolescents: Psychometric Properties of the German Version of the Repetitive Behavior Scale-Revised},
 	journal = {Journal of Autism and Developmental Disorders}
 },
@@ -159,7 +159,7 @@
 	year = 2020,
 	month = {jul},
 	publisher = {Cold Spring Harbor Laboratory},
-	author = {Sarah Baumeister and Carolin Moessnang and Nico Bast and Sarah Hohmann and Julian Tillmann and David Goyard and Tony Charman and Sara Ambrosino and Simon Baron-Cohen and Christian Beckmann and Sven Bölte and Thomas Bourgeron and Annika Rausch and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Dorothea L. Floris and Vincent Frouin and Hannah Hayward and Rosemary Holt and Mark H. Johnson and Emily J.H. Jones and Meng-Chuan Lai and Michael V. Lombardo and Luke Mason and Marianne Oldehinkel and Tony Persico and Antonia San Jos{\'{e}} C{\'{a}}ceres and Thomas Wolfers and Will Spooren and Eva Loth and Declan G. M. Murphy and Jan K. Buitelaar and Heike Tost and Andreas Meyer-Lindenberg and Tobias Banaschewski and Daniel Brandeis and},
+	author = {Sarah Baumeister and Carolin Moessnang and Nico Bast and Sarah Hohmann and Julian Tillmann and David Goyard and Tony Charman and Sara Ambrosino and Simon Baron-Cohen and Christian Beckmann and Sven Boelte and Thomas Bourgeron and Annika Rausch and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Dorothea L. Floris and Vincent Frouin and Hannah Hayward and Rosemary Holt and Mark H. Johnson and Emily J.H. Jones and Meng-Chuan Lai and Michael V. Lombardo and Luke Mason and Marianne Oldehinkel and Tony Persico and Antonia San Jos{\'{e}} C{\'{a}}ceres and Thomas Wolfers and Will Spooren and Eva Loth and Declan G. M. Murphy and Jan K. Buitelaar and Heike Tost and Andreas Meyer-Lindenberg and Tobias Banaschewski and Daniel Brandeis and},
 	title = {Attenuated Anticipation of Social and Monetary Rewards in Autism Spectrum Disorders}
 },
 @article{Bast_2020,
@@ -190,7 +190,7 @@
 },
 @article{PPR:PPR125929,
 	title = {Study protocol of the multi-centre, randomized controlled trial of the Frankfurt Early Intervention Program A-FFIP versus early intervention as usual for toddlers and preschool children with Autism Spectrum Disorder (A-FFIP study)},
-	author = {Kitzerow J and Freitag CM and Hackbusch M and Jensen K and Kieser M and Noterdaeme M and Fröhlich U and Taurines R and Geißler J and Nicole W and Roessner V and Bast N and Teufel K and Kim Z},
+	author = {Kitzerow J and Freitag CM and Hackbusch M and Jensen K and Kieser M and Noterdaeme M and Froehlich U and Taurines R and Geißler J and Nicole W and Roessner V and Bast N and Teufel K and Kim Z},
 	doi = {10.21203/rs.2.10294/v2}
 },
 @article{Bast_2019,
@@ -208,7 +208,7 @@
 },
 @article{PMID:30741482,
 	title = {Investigating the factors underlying adaptive functioning in autism in the EU-AIMS Longitudinal European Autism Project.},
-	author = {Tillmann J and San José Cáceres A and Chatham CH and Crawley D and Holt R and Oakley B and Banaschewski T and Baron-Cohen S and Bölte S and Buitelaar JK and Durston S and Ham L and EU-AIMS LEAP group},
+	author = {Tillmann J and San José Cáceres A and Chatham CH and Crawley D and Holt R and Oakley B and Banaschewski T and Baron-Cohen S and Boelte S and Buitelaar JK and Durston S and Ham L and EU-AIMS LEAP group},
 	doi = {10.1002/aur.2081},
 	journal = {Autism research : official journal of the International Society for Autism Research},
 	month = {04},
@@ -224,7 +224,7 @@
 },
 @article{PMID:29682271,
 	title = {EU-AIMS Longitudinal European Autism Project (LEAP): the autism twin cohort.},
-	author = {Isaksson J and Tammimies K and Neufeld J and Cauvet É and Lundin K and Buitelaar JK and Loth E and Murphy DGM and Spooren W and Bölte S and EU-AIMS LEAP group},
+	author = {Isaksson J and Tammimies K and Neufeld J and Cauvet É and Lundin K and Buitelaar JK and Loth E and Murphy DGM and Spooren W and Boelte S and EU-AIMS LEAP group},
 	doi = {10.1186/s13229-018-0212-x},
 	journal = {Molecular autism},
 	year = {2018}
