added publication test

--- a/markdown_generator/works.bib
+++ b/markdown_generator/works.bib
@@ -21,7 +21,7 @@
 	year = {2022}
 },
 @article{PMID:36070771,
-	title = {Sensorische Auffaelligkeiten bei Autismus-Spektrum-Stoerung: Validierung und Adaptation des englischsprachigen „Sensory Perception Quotient“ (SPQ) von Tavassoli und Kollegen.},
+	title = {Sensorische Auffaelligkeiten bei Autismus-Spektrum-Stoerung: Validierung und Adaptation des englischsprachigen Sensory Perception Quotient (SPQ) von Tavassoli und Kollegen.},
 	author = {Klein C and Miczuga T and Roering H and Kost M and Bast N and Thiemann U and Jarczok T and Fleischhaker C and Tebartz van Elst L and Riedel A and Biscaldi M},
 	doi = {10.1055/a-1839-6095},
 	journal = {Fortschritte der Neurologie-Psychiatrie},
