added publication test

--- a/markdown_generator/works.bib
+++ b/markdown_generator/works.bib
@@ -60,7 +60,7 @@
 },
 @article{PMID:35654973,
 	title = {Genetic correlates of phenotypic heterogeneity in autism.},
-	author = {Warrier V and Zhang X and Reed P and Havdahl A and Moore TM and Cliquet F and Leblond CS and Rolland T and Rosengren A and EU-AIMS LEAP and iPSYCH-Autism Working Group and Baron-Cohen S},
+	author = {Warrier V and Zhang X and Reed P and Havdahl A and Moore TM and Cliquet F and Leblond CS and Rolland T and Rosengren A and EU-AIMS LEAP group and IPSYCH-Autism working group and Baron-Cohen S},
 	doi = {10.1038/s41588-022-01072-5},
 	journal = {Nature genetics},
 	month = {09},
@@ -159,6 +159,7 @@
 	year = 2020,
 	month = {jul},
 	publisher = {Cold Spring Harbor Laboratory},
+	journal = {BioRxiv},
 	author = {Sarah Baumeister and Carolin Moessnang and Nico Bast and Sarah Hohmann and Julian Tillmann and David Goyard and Tony Charman and Sara Ambrosino and Simon Baron-Cohen and Christian Beckmann and Sven Boelte and Thomas Bourgeron and Annika Rausch and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Dorothea L. Floris and Vincent Frouin and Hannah Hayward and Rosemary Holt and Mark H. Johnson and Emily J.H. Jones and Meng-Chuan Lai and Michael V. Lombardo and Luke Mason and Marianne Oldehinkel and Tony Persico and Antonia San Jos{\'{e}} C{\'{a}}ceres and Thomas Wolfers and Will Spooren and Eva Loth and Declan G. M. Murphy and Jan K. Buitelaar and Heike Tost and Andreas Meyer-Lindenberg and Tobias Banaschewski and Daniel Brandeis and},
 	title = {Attenuated Anticipation of Social and Monetary Rewards in Autism Spectrum Disorders}
 },
@@ -191,7 +192,8 @@
 @article{PPR:PPR125929,
 	title = {Study protocol of the multi-centre, randomized controlled trial of the Frankfurt Early Intervention Program A-FFIP versus early intervention as usual for toddlers and preschool children with Autism Spectrum Disorder (A-FFIP study)},
 	author = {Kitzerow J and Freitag CM and Hackbusch M and Jensen K and Kieser M and Noterdaeme M and Froehlich U and Taurines R and Geißler J and Nicole W and Roessner V and Bast N and Teufel K and Kim Z},
-	doi = {10.21203/rs.2.10294/v2}
+	journal = {Trials},
+	doi = {10.21203/rs.2.10294/v2}, year= {2020},
 },
 @article{Bast_2019,
 	doi = {10.1002/aur.2178},
@@ -229,14 +231,14 @@
 	journal = {Molecular autism},
 	year = {2018}
 },
-@article{charman2017eu, title= {The EU-AIMS Longitudinal European Autism Project (LEAP): clinical characterisation}, author= {Charman, Tony and Loth, Eva and Tillmann, Julian and Crawley, Daisy and Wooldridge, Caroline and Goyard, David and Ahmad, Jumana and Auyeung, Bonnie and Ambrosino, Sara and Banaschewski, Tobias and others}, journal= {Molecular autism}, volume= {8}, number= {1}, pages= {27}, year= {2017}, publisher= {BioMed Central}}
+@article{charman2017eu, title= {The EU-AIMS Longitudinal European Autism Project (LEAP): clinical characterisation}, author= {Charman, Tony and Loth, Eva and Tillmann, Julian and Crawley, Daisy and Wooldridge, Caroline and Goyard, David and Ahmad, Jumana and Auyeung, Bonnie and Ambrosino, Sara and Banaschewski, Tobias and EU-AIMS LEAP group}, journal= {Molecular autism}, volume= {8}, number= {1}, pages= {27}, year= {2017}, publisher= {BioMed Central}}
 
 ,
-@article{loth2017eu, title= {The EU-AIMS Longitudinal European Autism Project (LEAP): design and methodologies to identify and validate stratification biomarkers for autism spectrum disorders}, author= {Loth, Eva and Charman, Tony and Mason, Luke and Tillmann, Julian and Jones, Emily JH and Wooldridge, Caroline and Ahmad, Jumana and Auyeung, Bonnie and Brogna, Claudia and Ambrosino, Sara and others}, journal= {Molecular autism}, volume= {8}, number= {1}, pages= {24}, year= {2017}, publisher= {BioMed Central}}
+@article{loth2017eu, title= {The EU-AIMS Longitudinal European Autism Project (LEAP): design and methodologies to identify and validate stratification biomarkers for autism spectrum disorders}, author= {Loth, Eva and Charman, Tony and Mason, Luke and Tillmann, Julian and Jones, Emily JH and Wooldridge, Caroline and Ahmad, Jumana and Auyeung, Bonnie and Brogna, Claudia and Ambrosino, Sara and EU-AIMS LEAP group}, journal= {Molecular autism}, volume= {8}, number= {1}, pages= {24}, year= {2017}, publisher= {BioMed Central}}
 
 ,
 @article{muller2016validation, title= {Validation of the Movie for the Assessment of Social Cognition in Adolescents with ASD: Fixation Duration and Pupil Dilation as Predictors of Performance}, author= {M{\"u}ller, Nico and Baumeister, Sarah and Dziobek, Isabel and Banaschewski, Tobias and Poustka, Luise}, journal= {Journal of autism and developmental disorders}, volume= {46}, number= {9}, pages= {2831--2844}, year= {2016}, publisher= {Springer}}
 
 ,
-@article{bastlocus, title= {The locus coeruleus-norepinephrine system as pacemaker of attention--A developmental mechanism of derailed attentional function in autism spectrum disorder}, author= {Bast, Nico and Poustka, Luise and Freitag, Christine M}, journal= {European Journal of Neuroscience}, publisher= {Wiley Online Library}}
+@article{bastlocus, title= {The locus coeruleus-norepinephrine system as pacemaker of attention--A developmental mechanism of derailed attentional function in autism spectrum disorder}, author= {Bast, Nico and Poustka, Luise and Freitag, Christine M}, journal= {European Journal of Neuroscience}, year= {2018}, publisher= {Wiley Online Library}}
 
