added publication test

--- a/markdown_generator/works.bib
+++ b/markdown_generator/works.bib
@@ -11,7 +11,7 @@
 	title = {Fluid Intelligence Is (Much) More than Working Memory Capacity: An Experimental Analysis},
 	journal = {Journal of Intelligence}
 },
-@article{Bast_2023,	doi = {10.1186/s13229-023-00537-6},	url = {https://doi.org/10.1186%2Fs13229-023-00537-6},	year = 2023,	month = {feb},	publisher = {Springer Science and Business Media {LLC}},	volume = {14},	number = {1},	author = {Nico Bast and Luke Mason and Christine Ecker and Sarah Baumeister and Tobias Banaschewski and Emily J. H. Jones and Declan G. M. Murphy and Jan K. Buitelaar and Eva Loth and Gahan Pandina and Jumana Ahmad and Sara Ambrosino and Bonnie Auyeung and Tobias Banaschewski and Simon Baron-Cohen and Nico Bast and Sarah Baumeister and Christian F. Beckmann and Sven Boelte and Thomas Bourgeron and Carsten Bours and Michael Brammer and Daniel Brandeis and Claudia Brogna and Yvette de Bruijn and Jan K. Buitelaar and Bhismadev Chakrabarti and Tony Charman and Ineke Cornelissen and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Jessica Faulkner and Vincent Frouin and Pilar Garc{\'{e}}s and David Goyard and Lindsay Ham and Hannah Hayward and Joerg Hipp and Rosemary Holt and Mark Johnson and Emily J. H. Jones and Prantik Kundu and Meng-Chuan Lai and Xavier Liogier D'ardhuy and Michael V. Lombardo and Eva Loth and David J. Lythgoe and Ren{\'{e}} Mandl and Andre Marquand and Luke Mason and Maarten Mennes and Andreas Meyer-Lindenberg and Carolin Moessnang and Declan G. M. Murphy and Bethany Oakley and Laurence O'Dwyer and Marianne Oldehinkel and Bob Oranje and Gahan Pandina and Antonio M. Persico and Barbara Ruggeri and Amber Ruigrok and Jessica Sabet and Roberto Sacco and Antonia San Jos{\'{e}} C{\'{a}}ceres and Emily Simonoff and Will Spooren and Julian Tillmann and Roberto Toro and Heike Tost and Jack Waldman and Steve C. R. Williams and Caroline Wooldridge and Marcel P. Zwiers and Christine M. Freitag and},	title = {Sensory salience processing moderates attenuated gazes on faces in autism spectrum disorder: a case{\textendash}control study},	journal = {Molecular Autism}},
+@article{Bast_2023,	doi = {10.1186/s13229-023-00537-6},	url = {https://doi.org/10.1186%2Fs13229-023-00537-6},	year = 2023,	month = {feb},	publisher = {Springer Science and Business Media {LLC}},	volume = {14},	number = {1},	author = {Nico Bast and Luke Mason and Christine Ecker and Sarah Baumeister and Tobias Banaschewski and Emily J. H. Jones and Declan G. M. Murphy and Jan K. Buitelaar and Eva Loth and Gahan Pandina and Jumana Ahmad and Sara Ambrosino and Bonnie Auyeung and Tobias Banaschewski and Simon Baron-Cohen and Nico Bast and Sarah Baumeister and Christian F. Beckmann and Sven Boelte and Thomas Bourgeron and Carsten Bours and Michael Brammer and Daniel Brandeis and Claudia Brogna and Yvette de Bruijn and Jan K. Buitelaar and Bhismadev Chakrabarti and Tony Charman and Ineke Cornelissen and Daisy Crawley and Flavio Dell'Acqua and Guillaume Dumas and Sarah Durston and Christine Ecker and Jessica Faulkner and Vincent Frouin and Pilar Garces and David Goyard and Lindsay Ham and Hannah Hayward and Joerg Hipp and Rosemary Holt and Mark Johnson and Emily J. H. Jones and Prantik Kundu and Meng-Chuan Lai and Xavier Liogier D'ardhuy and Michael V. Lombardo and Eva Loth and David J. Lythgoe and Ren{\'{e}} Mandl and Andre Marquand and Luke Mason and Maarten Mennes and Andreas Meyer-Lindenberg and Carolin Moessnang and Declan G. M. Murphy and Bethany Oakley and Laurence O'Dwyer and Marianne Oldehinkel and Bob Oranje and Gahan Pandina and Antonio M. Persico and Barbara Ruggeri and Amber Ruigrok and Jessica Sabet and Roberto Sacco and Antonia San Jos{\'{e}} C{\'{a}}ceres and Emily Simonoff and Will Spooren and Julian Tillmann and Roberto Toro and Heike Tost and Jack Waldman and Steve C. R. Williams and Caroline Wooldridge and Marcel P. Zwiers and Christine M. Freitag and},	title = {Sensory salience processing moderates attenuated gazes on faces in autism spectrum disorder: a case{\textendash}control study},	journal = {Molecular Autism}},
 @article{PMID:36111843,
 	title = {Pupillometric measures of altered stimulus-evoked locus coeruleus-norepinephrine activity explain attenuated social attention in preschoolers with autism spectrum disorder.},
 	author = {Polzer L and Freitag CM and Bast N},
@@ -68,7 +68,7 @@
 },
 @article{PMID:35585637,
 	title = {Resting state EEG power spectrum and functional connectivity in autism: a cross-sectional analysis.},
-	author = {Garcés P and Baumeister S and Mason L and Chatham CH and Holiga S and Dukart J and Jones EJH and Banaschewski T and Baron-Cohen S and Boelte S and Buitelaar JK and Durston S and EU-AIMS LEAP group authorship},
+	author = {Garces P and Baumeister S and Mason L and Chatham CH and Holiga S and Dukart J and Jones EJH and Banaschewski T and Baron-Cohen S and Boelte S and Buitelaar JK and Durston S and EU-AIMS LEAP group},
 	doi = {10.1186/s13229-022-00500-x},
 	journal = {Molecular autism},
 	month = {05},
@@ -193,7 +193,8 @@
 	title = {Study protocol of the multi-centre, randomized controlled trial of the Frankfurt Early Intervention Program A-FFIP versus early intervention as usual for toddlers and preschool children with Autism Spectrum Disorder (A-FFIP study)},
 	author = {Kitzerow J and Freitag CM and Hackbusch M and Jensen K and Kieser M and Noterdaeme M and Froehlich U and Taurines R and Geißler J and Nicole W and Roessner V and Bast N and Teufel K and Kim Z},
 	journal = {Trials},
-	doi = {10.21203/rs.2.10294/v2}, year= {2020},
+	year= {2020},
+	doi = {10.21203/rs.2.10294/v2}
 },
 @article{Bast_2019,
 	doi = {10.1002/aur.2178},
