added publication test

--- a/markdown_generator/works.bib
+++ b/markdown_generator/works.bib
@@ -112,7 +112,7 @@
 	publisher = {Springer Science and Business Media {LLC}},
 	volume = {21},
 	number = {1},
-	author = {Janina Kitzerow and Matthes Hackbusch and Katrin Jensen and Meinhard Kieser and Michele Noterdaeme and Ulrike Froehlich and Regina Taurines and Julia Gei{\ss}ler and Nicole Wolff and Veit Roessner and Nico Bast and Karoline Teufel and Ziyon Kim and Christine M. Freitag},
+	author = {Janina Kitzerow and Matthes Hackbusch and Katrin Jensen and Meinhard Kieser and Michele Noterdaeme and Ulrike Froehlich and Regina Taurines and Julia Geissler and Nicole Wolff and Veit Roessner and Nico Bast and Karoline Teufel and Ziyon Kim and Christine M. Freitag},
 	title = {Study protocol of the multi-centre, randomised controlled trial of the Frankfurt Early Intervention Programme A-{FFIP} versus early intervention as usual for toddlers and preschool children with Autism Spectrum Disorder (A-{FFIP} study)},
 	journal = {Trials}
 },
@@ -227,7 +227,7 @@
 },
 @article{PMID:29682271,
 	title = {EU-AIMS Longitudinal European Autism Project (LEAP): the autism twin cohort.},
-	author = {Isaksson J and Tammimies K and Neufeld J and Cauvet É and Lundin K and Buitelaar JK and Loth E and Murphy DGM and Spooren W and Boelte S and EU-AIMS LEAP group},
+	author = {Isaksson J and Tammimies K and Neufeld J and Cauvet E and Lundin K and Buitelaar JK and Loth E and Murphy DGM and Spooren W and Boelte S and EU-AIMS LEAP group},
 	doi = {10.1186/s13229-018-0212-x},
 	journal = {Molecular autism},
 	year = {2018}
