--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -2,6 +2,8 @@
 title: 'Blog Post number 1'
 date: 2012-08-14
 permalink: /posts/2012/08/blog-post-1/
+header:
+  teaser: "unsplash-gallery-image-2-th.jpg"
 tags:
   - cool posts
   - category1
