added test media file

--- a/_posts/2024-09-12-testfile1.md
+++ b/_posts/2024-09-12-testfile1.md
@@ -4,4 +4,14 @@ date: 2024-09-12
 permalink: /posts/2024/09/testfile1/
 ---
 
-[Press release](https://aktuelles.uni-frankfurt.de/forschung/2-mio-euro-fuer-die-frage-lassen-sich-psychische-erkrankungen-vorhersagen/) on the funding of the Emmy Noether Research Group. 
+[Press release](https://aktuelles.uni-frankfurt.de/forschung/2-mio-euro-fuer-die-frage-lassen-sich-psychische-erkrankungen-vorhersagen/) on the funding of the Emmy Noether Research Group.
+
+here is an Englisch translation by Chat-GPT4:
+
+The research project LOCUS-MENTAL aims to determine whether part of the risk for mental illnesses can be predicted by measuring the pupil responses in toddlers. Young children and schoolchildren with an increased risk could then be specifically supported to prevent an initial illness. The research project by Dr. Nico Bast, psychotherapist and head of clinical research at the Clinic for Psychiatry, Psychosomatics, and Psychotherapy of Childhood and Adolescence, is now being funded with 2 million euros as part of the Emmy Noether Program of the German Research Foundation (DFG).
+
+Dr. Nico Bast, Image: University Medicine Frankfurt In Germany, almost a third of adults are affected by a mental illness each year. Symptoms often appear in childhood. If these are not recognized or even manifest illnesses are overlooked, this can often have serious consequences. For example, a child suffering from an anxiety disorder has an increased risk of severe or chronic depression as an adult. “This is exactly where the LOCUS-MENTAL project comes in: The central question is whether we can predict certain biological risks regarding the individual development of a mental illness. Then we could specifically support children with an increased risk very early on,” explains Dr. Nico Bast, head of clinical research at the Clinic for Psychiatry, Psychosomatics, and Psychotherapy of Childhood and Adolescence. The research project is funded with 1 million euros as part of the Emmy Noether Program of the DFG and another million euros is promised after a positive interim evaluation of the project. “This is one of the most coveted research grants in Germany - congratulations to Dr. Nico Bast! The funding highlights that he is pursuing an innovative and promising research approach with LOCUS-MENTAL,” says Professor Dr. Christine M. Freitag, director of the Clinic for Psychiatry, Psychosomatics, and Psychotherapy of Childhood and Adolescence.
+
+When do people react to stress with psychological distress? LOCUS-MENTAL stands for “Locus-Coeruleus Norepinephrine functioning as a predictor of childhood mental health.” Specifically, the research project is based on the property of people being differently susceptible to stress. While some children thrive under adverse circumstances, other children are already overwhelmed by everyday demands. “The Locus Coeruleus - Norepinephrine System (LC-NE) probably plays a moderating role in this,” explains Dr. Bast. The LC-NE describes a tiny area in the brainstem responsible for the production of the neurotransmitter norepinephrine and, with its connections in the brain, determines how strongly we react to sensory stimuli. “Studies have shown that the activity of the LC-NE predicts whether people react to challenging situations with psychological distress. Our research has shown how we can measure and characterize this LC-NE system in children through pupil responses using cameras,” says Dr. Bast. Additionally, other biological parameters such as cortisol in saliva and hair samples are determined, and the temperament of the children is assessed using questionnaires. The goal is to create an objective instrument to predict individual disease risk.
+
+Early detection consultation planned The tests within the study can be well integrated into clinical examinations. They mean hardly any additional burden for the children and are fun as they are conducted on the computer. “With LOCUS-MENTAL, we are expanding an early detection consultation in our psychiatric outpatient clinic,” says Professor Dr. Freitag. “The further goal is to establish an early intervention center for toddlers with an increased risk or a manifest mental disorder (PTFZ). This has been fundamentally recognized as relevant and worthy of support by the city of Frankfurt; financial negotiations still need to be concluded. Due to the combination of early diagnosis and early intervention, we have a real chance with both facilities and together with the innovative research project LOCUS-MENTAL to identify and support children with an increased risk of mental illnesses early on. In this way, we aim to significantly reduce chronic mental illnesses through secondary prevention in the future
